Fix dark mode position on all media

--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,35 @@ a {
   user-select: none;
   -moz-user-select: none;
 }
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+  #toggle-light {
+    right: 0;
+  }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  #toggle-light {
+    right: 50%;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  #toggle-light {
+    right: 50%;
+  }
+}
+
+ /* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  #toggle-light {
+    right: 50%;
+  }
+}
+
 svg {
   height: 2rem;
   width: 2rem;
